apps/headlamp/httproute-headlamp.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    external-dns.kubernetes.io/target: "${SECRET_GATEWAY}"
spec:
  parentRefs:
  - name: internal
    namespace: networking
  - name: external
    namespace: networking
  hostnames:
  - "headlamp.${SECRET_DOMAIN}"
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
